packages/filtered-text/src/scss/main.scss
.cove-visualization.is-editor {
  background: transparent;
}

.cove-accordion__panel-section {
  overflow: auto;

  .cove-input__checkbox--small {
    float: left;
    display: block;
    margin-right: 5px;
  }
}

.cove-visualization.type-filtered-text {
  .cove-accordion__panel-section .cove-input__checkbox--small {
    // float: initial;
    // display: initial;
    float: none;
  }
  .cove-visualization__body.body:not(:empty) {
    padding: 0;

    &.has-top-padding {
      padding-top: 1rem;
      padding-bottom: 1rem;
    }

    &.has-side-padding {
      padding-left: 1rem;
      padding-right: 1rem;
    }
  }
}

